--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-
     <title>IP Address Tracker</title>
+    <link rel="icon" type="image/x-icon" href="./globe.png" />
   </head>
   <body>
     <div id="root"></div>
